# cortex_bridge

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build_all.sh  build_headers.sh  cbindgen.toml  deny.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
docs/: CORTEX_BRIDGE_DESIGN.md  CORTEX_BRIDGE_SUMMARY.md  EASYTIER_SEPARATION_PLAN.md  EASYTIER_SEPARATION_PLAN_SUMMARY.md  QUICK_START.md  README_TIMEZONE.md  TEST_COVERAGE_SUMMARY.md
easytier_common/: Cargo.toml  build.rs  cbindgen.toml
easytier_common/include/: easytier_common.h
easytier_common/src/: error.rs  ffi_utils.rs  lib.rs  logging.rs
easytier_config_server/: Cargo.toml  build.rs  cbindgen.toml
easytier_config_server/include/: easytier_config_server.h
easytier_config_server/src/: config.rs  config_srv.rs  ffi.rs  lib.rs
easytier_config_server/src/client_manager/: mod.rs  session.rs  storage.rs
easytier_config_server/src/db/: connection.rs  mod.rs
easytier_config_server/src/db/entities/: devices.rs  mod.rs
easytier_config_server/src/db/migrations/: m20240101_000002_create_devices_table.rs  m20240101_000005_create_organizations_table.rs  m20240101_000007_drop_network_configs_table.rs  m20240101_000008_update_device_status_enum.rs  mod.rs
easytier_config_server/tests/: drop_test_dbs.rs  test_cleanup.rs  test_client_manager.rs  test_cross_crate_integration.rs  test_device_status_new_behaviors.rs  test_device_status_updates.rs  test_ffi_geoip.rs  test_geoip_config.rs  test_heartbeat_organization_validation.rs  test_session_advanced.rs  test_storage_comprehensive.rs
easytier_config_server/tests/common/: mod.rs
easytier_device_client/: Cargo.toml  cbindgen.toml
easytier_device_client/include/: easytier_device_client.h
easytier_device_client/src/: lib.rs  stun_wrapper.rs  web_client.rs
easytier_device_client/tests/: test_machine_id_ffi.rs  test_web_client_ffi.rs
easytier_network_gateway/: Cargo.toml  cbindgen.toml
easytier_network_gateway/include/: easytier_network_gateway.h
easytier_network_gateway/src/: core_wrapper.rs  lib.rs
easytier_network_gateway/tests/: launcher_test.rs  test_builder_api.rs  test_gateway_ffi.rs
examples/: cortex_agent_integration.py  cortex_server_config_server.go  cortex_server_gateway.go
include/: easytier_bridge.h
rerun_bridge/: Cargo.toml  build.rs  cbindgen.toml
rerun_bridge/include/: rerun_bridge.h
rerun_bridge/src/: converters.rs  error.rs  lib.rs  recording.rs
src/: config.rs  config_srv.rs  easytier_core_ffi.rs  easytier_web_client.rs  launcher_test.rs  lib.rs  logging.rs  network_config_srv_ffi.rs  stun_wrapper.rs
src/client_manager/: mod.rs  session.rs  storage.rs
src/db/: connection.rs  mod.rs
src/db/entities/: devices.rs  mod.rs  organizations.rs
src/db/migrations/: m20240101_000002_create_devices_table.rs  m20240101_000005_create_organizations_table.rs  m20240101_000007_drop_network_configs_table.rs  m20240101_000008_update_device_status_enum.rs  m20240101_000009_add_virtual_ip_fields.rs  mod.rs
tests/: README.md  common.rs  drop_test_dbs.rs  mod.rs  test_cleanup.rs  test_client_manager.rs  test_device_status_new_behaviors.rs  test_device_status_updates.rs  test_ffi_geoip.rs  test_geoip_config.rs  test_heartbeat_organization_validation.rs  test_machine_id_ffi.rs  test_session_advanced.rs  test_storage_comprehensive.rs
tests/common/: mod.rs
