[workspace]
members = [
    "easytier_common",
    "easytier_device_client",
    "easytier_config_server",
    "easytier_network_gateway",
    "rerun_bridge",
]
resolver = "2"

[workspace.dependencies]
# EasyTier integration - 核心依赖 (使用 GitHub 依赖)
easytier = { git = "https://github.com/EasyTier/EasyTier", tag = "v2.4.2" }

# Core async runtime
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
uuid = { version = "1.0", features = ["v4"] }
once_cell = "1.19"
dashmap = "5.5"
url = "2.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time", "local-time"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
gethostname = "0.4.3"

# Server-specific dependencies
maxminddb = "0.24"
urlencoding = "2.1"

# Database dependencies
sea-orm = { version = "1.1", features = ["sqlx-mysql", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = "1.1"

# FFI dependencies
libc = "0.2"

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Cortex Team"]
license = "MIT"

# 编译优化配置
[profile.dev]
opt-level = 1
incremental = true
codegen-units = 256

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
