[package]
name = "easytier_common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Common utilities for EasyTier integration crates"

[lib]
name = "easytier_common"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
anyhow.workspace = true
libc.workspace = true
once_cell.workspace = true

[build-dependencies]
cbindgen = "0.26"

