[package]
name = "easytier_config_server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EasyTier config server for managing device connections"

[lib]
name = "easytier_config_server"
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["geoip"]
geoip = ["maxminddb"]

[dependencies]
easytier.workspace = true
easytier_common = { path = "../easytier_common" }

tokio.workspace = true
async-trait.workspace = true
uuid.workspace = true
url.workspace = true
dashmap.workspace = true
once_cell.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Server-specific
maxminddb = { workspace = true, optional = true }
urlencoding.workspace = true

# Database
sea-orm.workspace = true
sea-orm-migration.workspace = true

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
serial_test = "3.0"
tracing-subscriber.workspace = true
# Cross-crate integration testing
easytier_device_client = { path = "../easytier_device_client" }
easytier_network_gateway = { path = "../easytier_network_gateway" }

[build-dependencies]
cbindgen = "0.29"

