[package]
name = "easytier_device_client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "EasyTier device-side web client for connecting to config server"

[lib]
name = "easytier_device_client"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
easytier.workspace = true
easytier_common = { path = "../easytier_common" }

tokio.workspace = true
uuid.workspace = true
url.workspace = true
gethostname.workspace = true
once_cell.workspace = true
async-trait.workspace = true
tracing.workspace = true

[build-dependencies]
cbindgen = "0.29"

